Mon Mar  5 13:56:33 2001  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/Synch_T.{h,i}: Further simplified the new ACE_Guard constructor.
	  Thanks to Chris Kohlhoff <chris@kohlhoff.com> for contributing
 	  this.

Mon Mar  5 19:20:45 2001  Fuzz Master D <brunsch@uci.edu>

        * bin/fuzz.pl:

          As Ossama pointed out, the ACE_CHECK test was seeing
          problems in the tao_idl files since it has uses of ACE_TRY_ENV
          inside quotes.  Made sure not to detect problems in this case.

Mon Mar  5 18:58:32 2001  Fuzz Master D <brunsch@uci.edu>

        * bin/fuzz.pl:

          Fixed some false positives in the resolve_initial_reference
          test and also added an ACE_CHECK test by Carlos's request.

Mon Mar  5 18:54:42 2001  Darrell Brunsch <brunsch@uci.edu>

        * bin/PerlACE/Process_Unix.pm:

          Updated the signal detection to not pay attention to TERM and
          KILL.  Will print out better output when signals cause a process
          to exit during most calls like Kill () or TerminateWaitKill ().

Mon Mar  5 13:56:33 2001  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/Synch_T.{h,i}: Added a new ACE_Guard constructor that
	  allows the caller to select whether the guard owns/acquires the
 	  lock or not.  Thanks to Chris Kohlhoff <chris@kohlhoff.com> for
 	  contributing this.

	* ace/Synch_T.{h,i}: Added a disown() method that relinquishes
 	  ownership of the lock so that it is not released implicitly in
 	  the destructor.  Thanks to Chris Kohlhoff <chris@kohlhoff.com>
 	  for contributing this.

	* ace/Event_Handler.h: Updated the comment on handle_close() so that
	  it more accurately reflects what is going on.  Thanks to Defang
 	  Zhou <dzhou@inktomi.com> for suggesting this.

	* apps/Gateway/Gateway/Concrete_Connection_Handlers.{h,cpp}: Added
	  handle_close() operations to solve problems with certain
 	  concurrency models.  Thanks to Defang Zhou <dzhou@inktomi.com>
 	  for reporting this.
